--- a/Calculator/package.json
+++ b/Calculator/package.json
@@ -10,8 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@flaticon/flaticon-uicons": "^3.2.0",
+    "@fontsource/inter": "^5.0.17",
+    "@mui/joy": "^5.0.0-beta.32",
+    "@reduxjs/toolkit": "^2.2.3",
+    "mathjs": "^12.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "sass": "^1.74.1"
   },
   "devDependencies": {
